WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288710
Enabling scoped custom element registry breaks carmax.com
https://bugs.webkit.org/show_bug.cgi?id=288710
Summary
Enabling scoped custom element registry breaks carmax.com
Ryosuke Niwa
Reported
2025-02-27 02:40:55 PST
Reproduction steps. 1. Visit
https://www.carmax.com/cars/toyota
2. Click on "Make" in the menu Expected result: The list of car manufacturers with checkboxes appear Actual result: The list of car manufacturers are shown without checkboxes.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2025-02-27 02:41:23 PST
<
rdar://145652003
>
Ryosuke Niwa
Comment 2
2025-02-27 02:46:08 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41506
EWS
Comment 3
2025-02-27 13:02:19 PST
Committed
291247@main
(3af19d7c2932): <
https://commits.webkit.org/291247@main
> Reviewed commits have been landed. Closing PR #41506 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug