Enabling scoped custom element registry breaks carmax.com https://bugs.webkit.org/show_bug.cgi?id=288710

Reviewed by Anne van Kesteren.

The regression was caused by Polymer's polyfill for scoped custom element registry.

Workaround the issue by allowing customElements to be of any type in ShadowRootInit,
and making ShadowRoot.prototype.customElements replaceable by author scripts.

* LayoutTests/imported/w3c/web-platform-tests/custom-elements/revamped-scoped-registry/CustomElementRegistry-initialize.tentative.html:
* LayoutTests/imported/w3c/web-platform-tests/custom-elements/revamped-scoped-registry/ShadowRoot-init-customElements.tentative-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/custom-elements/revamped-scoped-registry/ShadowRoot-init-customElements.tentative.html:
* Source/WebCore/dom/Element.cpp:
* Source/WebCore/dom/ShadowRoot.idl:
* Source/WebCore/dom/ShadowRootInit.h:
* Source/WebCore/dom/ShadowRootInit.idl:

Canonical link: https://commits.webkit.org/291247@main